Handle NaN values in 3d series

Fixes: QTBUG-140240
Pick-to: 6.10 6.8
Change-Id: Ib476a877dea4815b91626f83c107c91c0354731d
Reviewed-by: Tomi Korpipää <tomi.korpipaa@qt.io>
Reviewed-by: Sami Varanka <sami.varanka@qt.io>