tests/manual/scattertest/scatterchart.h
@@ -46,6 +46,7 @@ public:
     void setFpsLabel(QLabel *fpsLabel) { m_fpsLabel = fpsLabel; }
     void testItemChanges();
     void testAxisReverse();
+    void testNanSeries();
 
 public Q_SLOTS:
     void changeShadowQuality(int quality);
@@ -105,6 +106,8 @@ private:
     void populateFlatSeries(QScatter3DSeries *series, int rows, int columns, float value);
     void populateRisingSeries(QScatter3DSeries *series, int rows, int columns, float minValue,
                               float maxValue);
+
+    void populateNanSeries(QScatter3DSeries *series, int rows, int columns, float value);
     void deleteAxis(QValue3DAxis *axis);
 
     Q3DScatterWidgetItem *m_chart;
