tests/manual/surfacetest/main.cpp
@@ -404,6 +404,9 @@ int main(int argc, char *argv[])
     QPushButton *testDataOrderingButton = new QPushButton(widget);
     testDataOrderingButton->setText(QStringLiteral("Test data ordering"));
 
+    QPushButton *testNanSeriesButton = new QPushButton(widget);
+    testNanSeriesButton->setText(QStringLiteral("Test NaN series"));
+
     QFrame* line = new QFrame();
     line->setFrameShape(QFrame::HLine);
     line->setFrameShadow(QFrame::Sunken);
@@ -625,6 +628,7 @@ int main(int argc, char *argv[])
     vLayout3->addWidget(massiveDataTestButton);
     vLayout3->addWidget(testReverseButton);
     vLayout3->addWidget(testDataOrderingButton);
+    vLayout3->addWidget(testNanSeriesButton);
     vLayout3->addWidget(axisTitlesVisibleCB);
     vLayout3->addWidget(xAxisLabelsVisibleCB);
     vLayout3->addWidget(yAxisLabelsVisibleCB);
@@ -856,6 +860,8 @@ int main(int argc, char *argv[])
                      modifier, &GraphModifier::testAxisReverse);
     QObject::connect(testDataOrderingButton, &QPushButton::clicked,
                      modifier, &GraphModifier::testDataOrdering);
+    QObject::connect(testNanSeriesButton, &QPushButton::clicked,
+                     modifier, &GraphModifier::testNanSeries);
     QObject::connect(axisTitlesVisibleCB, &QCheckBox::checkStateChanged,
                      modifier, &GraphModifier::toggleAxisTitleVisibility);
     QObject::connect(xAxisLabelsVisibleCB,
